--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.6.5",
     "next": "12.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
