--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^6.6.5",
     "next": "12.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
