--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "antd": "^4.23.6",
+    "antd": "^5.0.3",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
-    "next": "12.3.1",
+    "next": "^12.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0"
