--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^5.0.3",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "next": "^12.2.2",
+    "npm": "^9.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0"
