--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@ant-design/pro-layout": "^7.12.1",
     "antd": "^5.0.3",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
