--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongoDbUrl=mongodb://127.0.0.1/mis-e-sitizen
+mongoDbUrl=mongodb+srv://kadingilanbukidnon2022:TYcLf5Ue9KDRKC5m@e-sitizen.pnpvxpq.mongodb.net/e-sitizen
