--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.9.1",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "filestack-react": "^4.0.1",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
