--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.6.0",
+    "react-icons": "4.11",
     "react-to-print": "^2.14.10"
   },
   "devDependencies": {
